--- a/app/src/main/res/drawable/ic_check.xml
+++ b/app/src/main/res/drawable/ic_check.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M14,7H16C18.761,7 21,9.239 21,12C21,14.761 18.761,17 16,17H14M10,7H8C5.239,7 3,9.239 3,12C3,14.761 5.239,17 8,17H10M8,12H16"
+      android:pathData="M4,12.611L8.923,17.5L20,6.5"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
