--- a/app/src/main/res/layout/activity_lab_public.xml
+++ b/app/src/main/res/layout/activity_lab_public.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -14,19 +13,19 @@
             android:id="@+id/sceneView"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/headersheet_background"
-            android:gravity="center_vertical"
             android:orientation="horizontal"
+            android:gravity="center_vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/headersheet_background">
 
             <ImageView
                 android:id="@+id/btnBack"
@@ -34,45 +33,33 @@
                 android:layout_height="30dp"
                 android:layout_marginStart="20dp"
                 android:src="@drawable/ic_back"
-                app:tint="@color/green_600" />
+                app:tint="@color/green_600"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="THÍ NGHIỆM CỦA NGUYỄN VĂN A"
                 android:layout_marginStart="20dp"
-                android:text="THÍ NGHIỆM A"
-                android:textColor="@color/green_700"
                 android:textSize="15sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="@color/green_700" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"/>
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnShare"
+                android:id="@+id/btnClone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:layout_marginEnd="20dp"
                 android:background="@drawable/button_outlined"
-                android:drawableStart="@drawable/ic_share"
-                android:text="Chia sẻ"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/text_answer" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnRefresh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
                 android:layout_marginEnd="20dp"
-                android:background="@drawable/button_outlined"
-                android:drawableStart="@drawable/ic_refresh"
-                android:text="Thử lại"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/text_answer" />
+                android:layout_marginVertical="5dp"
+                android:text="Tạo bản sao"
+                android:textSize="@dimen/text_answer"
+                android:drawableStart="@drawable/ic_clone"
+                android:textColor="@android:color/white"/>
 
         </LinearLayout>
 
@@ -84,18 +71,18 @@
             app:layout_constraintGuide_percent="0.75" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline15h"
+            android:id="@+id/guideline25h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.15" />
+            app:layout_constraintGuide_percent="0.25" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline65h"
+            android:id="@+id/guideline75h"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.65" />
+            app:layout_constraintGuide_percent="0.75" />
 
         <FrameLayout
             android:id="@+id/panelDetails"
@@ -104,10 +91,10 @@
             android:background="@drawable/title_panel_backround"
             android:padding="12dp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/guideline65h"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/guideline75w"
-            app:layout_constraintTop_toTopOf="@id/guideline15h">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline25h"
+            app:layout_constraintBottom_toBottomOf="@id/guideline75h">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -127,9 +114,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="Chi tiết vật thể"
-                        android:textColor="@color/white"
                         android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:textColor="@color/white"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -142,15 +129,15 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Tên vật thể: "
-                            android:textColor="@color/white"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:textColor="@color/white"/>
 
                         <TextView
                             android:id="@+id/item_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="2dp"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/white"/>
 
                     </LinearLayout>
 
@@ -161,20 +148,20 @@
                     android:id="@+id/btnRow"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:gravity="end"
                     android:orientation="horizontal"
+                    android:gravity="end"
                     android:paddingTop="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintBottom_toBottomOf="parent">
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnShow"
+                        android:id="@+id/btnDone"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:text="Hoàn tất"
                         android:background="@drawable/button_filled"
-                        android:text="Bố trí"
                         android:textColor="@android:color/white" />
 
                     <Space
@@ -182,12 +169,12 @@
                         android:layout_height="0dp" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnHide"
+                        android:id="@+id/btnDelete"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:text="Xoá"
                         android:background="@drawable/button_outlined"
-                        android:text="Tạm ẩn"
                         android:textColor="@android:color/white" />
                 </LinearLayout>
 
@@ -195,52 +182,4 @@
         </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!-- Bottom sheet “bookmark” (cần Material lib cho Behavior) -->
-    <FrameLayout
-        android:id="@+id/bottomSheet"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:background="@drawable/bottomsheet_background"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-        app:behavior_peekHeight="40dp"
-        app:behavior_hideable="false">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <!-- Bookmark handle -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="28dp"
-                android:gravity="center">
-
-                <View
-                    android:layout_width="50dp"
-                    android:layout_height="6dp"
-                    android:background="@drawable/handle_background" />
-            </LinearLayout>
-
-            <!-- Dãy icon model ngang -->
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fillViewport="true"
-                android:padding="12dp"
-                android:scrollbars="none">
-
-                <LinearLayout
-                    android:id="@+id/modelTray"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical">
-
-                </LinearLayout>
-            </HorizontalScrollView>
-        </LinearLayout>
-    </FrameLayout>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
