--- a/app/src/main/res/layout/fragment_virtual_lab.xml
+++ b/app/src/main/res/layout/fragment_virtual_lab.xml
@@ -35,21 +35,38 @@
             android:textColor="@color/green_700"
             android:layout_weight="1" />
 
-        <!-- Nút Bản sao -->
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnClone"
+
+        <com.google.android.material.button.MaterialButtonToggleGroup
+            android:id="@+id/scopeToggle"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:background="@android:color/transparent"
-            android:paddingHorizontal="12dp"
-            android:text="Bản sao"
-            android:textSize="10sp"
-            android:textColor="@color/blue_700"
-            android:textStyle="bold"
-            android:drawableStart="@drawable/ic_link"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            android:contentDescription="Bản sao" />
+            android:layout_height="36dp"
+            app:singleSelection="true"
+            app:selectionRequired="true">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnMine"
+                style="@style/Widget.Material3.Button.OutlinedButton"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                app:cornerRadius="10dp"
+                app:icon="@drawable/ic_user"
+                app:iconGravity="textStart"
+                app:iconPadding="6dp"
+                app:checkedIcon="@drawable/ic_check"
+                android:checkable="true"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnCommunity"
+                style="@style/Widget.Material3.Button.OutlinedButton"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                app:cornerRadius="10dp"
+                app:icon="@drawable/ic_earth"
+                app:iconGravity="textStart"
+                app:iconPadding="6dp"
+                app:checkedIcon="@drawable/ic_check"
+                android:checkable="true"/>
+        </com.google.android.material.button.MaterialButtonToggleGroup>
 
 
     </LinearLayout>
