--- a/app/src/main/res/layout/activity_lab_custom.xml
+++ b/app/src/main/res/layout/activity_lab_custom.xml
@@ -126,7 +126,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Chi tiết vật thể"
+                        android:text="Chi tiết dụng cụ"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -141,7 +141,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Tên vật thể: "
+                            android:text="Tên dụng cụ: "
                             android:textColor="@color/white"
                             android:textStyle="bold" />
 
