--- a/app/src/main/res/layout/activity_lab_public.xml
+++ b/app/src/main/res/layout/activity_lab_public.xml
@@ -113,7 +113,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Chi tiết vật thể"
+                        android:text="Chi tiết dụng cụ"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         android:textColor="@color/white"/>
@@ -128,7 +128,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Tên vật thể: "
+                            android:text="Tên dụng cụ: "
                             android:textStyle="bold"
                             android:textColor="@color/white"/>
 
